# SdtTR369-Public

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
accessor/: build.gradle  proguard-rules.pro
accessor/src/main/: AndroidManifest.xml
accessor/src/main/res/drawable/: button_background_dialog.xml  button_background_focused.xml  button_background_remotecontrol.xml  button_background_shortmsg.xml  button_background_unfocused.xml  text_color.xml
annotation/: build.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sdt_tms_tr369_model.default  sdt_tms_tr369_model.xml
gradle/wrapper/: gradle-wrapper.properties
key/: HP40AX2.keystore  HPR3A1325.keystore  SD.keystore  SkyTelecom.keystore  UnifyHybridX2.keystore  UnifyHybridX4.keystore  taipei.keystore
netspeed/: build.gradle
netspeed/src/main/: AndroidManifest.xml
patch/function/: 20230213_SWMD-577.patch  20230301_SWMD-639.patch  20240312_SWMD-1091.patch  20240320_SWMD-1093.patch
patch/integration/: AML_TR369_Integration.patch  RTD_TR369_Integration.patch
pty/: build.gradle
pty/src/main/jni/: main.cpp
remote/: build.gradle  proguard-rules.pro
remote/src/main/: AndroidManifest.xml
tr369/: build.gradle  proguard-rules.pro
tr369/src/main/cpp/: CMakeLists.txt
tr369/src/main/cpp/obuspa/inc/: data_model.h  device.h  proto_trace.h  usp-msg.pb-c.h
tr369/src/main/cpp/obuspa/src/: main.c  vendor.c  vendor_event.c
tr369/src/main/cpp/openTr369/core/: bdc_exec.c  cli_server.c  data_model.c  database.c  database.h  device.h  device_bulkdata.c  device_controller.c  device_ctrust.c  device_local_agent.c  device_mqtt.c  device_mtp.c  device_request.c  device_security.c  device_subscription.c  dm_exec.c  dm_trans.c  error_resp.c  handle_add.c  handle_delete.c  handle_get.c  handle_get_instances.c  handle_get_supported_dm.c  handle_get_supported_protocol.c  handle_notify.c  handle_operate.c  handle_set.c  main.c  mqtt.c  mqtt.h  proto_trace.c  sk_tr369_jni.h  stomp.c  usp-record.pb-c.h  usp_log.h  usp_mem.c
tr369/src/main/cpp/openTr369/include/: usp_err_codes.h  vendor_api.h
tr369/src/main/cpp/skSource/: sk_jni_callback.cpp  sk_jni_callback.h  sk_jni_network.cpp  sk_tr369_jni.cpp  sk_tr369_jni.h  sk_tr369_log.h
(+238 files in other folders)
